Eclipse autoformatting of everything